--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,7 +5,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 html, body {
+    overflow-x: hidden;
     height: 100vh;
     width: 100vw;
     background-color: black;
@@ -35,10 +41,29 @@ section#telefone {
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
 
-#tela {
+iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
     width: 269px;
     height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%; /* esses 50% serve pra deixar os botões redondos*/
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.678);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.637);
+    transition: transform 0.5s, border 1s;
 }
